--- a/relazioneAA/TeXConfig/commands.tex
+++ b/relazioneAA/TeXConfig/commands.tex
@@ -38,7 +38,7 @@
 \newcommand{\setmin}{\setminus}
 \newcommand{\ccsfun}[1]{\bigsquareparenthesis{\!\!\,\mid #1 \mid\!\!\,}}
 \newcommand{\nat}{{N\!at}}
-\newcommand{\comp}[1]{$\mathcal{O}\bigparenthesis{#1} $}
+\newcommand{\comp}[1]{$\mathcal{O}(#1)$}
 \newcommand{\grafo}{grafo $G = (V,E)\ $}
 \newcommand{\comm}[1]{\textcolor{teal}{//\textit{#1}}\\}
 \newcommand{\disjunion}[1]{\stackrel{.}{\bigcup\limits_{#1}}}
