--- a/relazioneAA/relazioneAA/listOfSections.tex
+++ b/relazioneAA/relazioneAA/listOfSections.tex
@@ -11,5 +11,9 @@
 	\pagebreak	
 	\pagenumbering{arabic}
 	%inserire input qui
-	\includeSection{introduzione}
+	\includeSection{Introduzione}
+	\includeSection{HeldKarp}
+	\includeSection{Heuristic}
+	\includeSection{Kruskal}
+	\includeSection{Conclusioni}
 \end{flushleft}
