--- a/relazioneAA/relazioneAA/listOfSections.tex
+++ b/relazioneAA/relazioneAA/listOfSections.tex
@@ -14,6 +14,6 @@
 	\includeSection{Introduzione}
 	\includeSection{HeldKarp}
 	\includeSection{Heuristic}
-	\includeSection{Kruskal}
+	\includeSection{2Approx}
 	\includeSection{Conclusioni}
 \end{flushleft}
