--- a/relazioneAA/relazioneAA/res/sections/introduzione.tex
+++ b/relazioneAA/relazioneAA/res/sections/introduzione.tex
@@ -30,10 +30,10 @@ Benché il codice sia stato adeguatamente commentato\footnote{come si può veder
 \subsection{Modello}
 Le componenti del modello, vale a dire le classi presenti all'interno del \texttt{package} chiamato \texttt{lab2.model}, comprendono tutte le strutture dati utilizzate nella risoluzione dei tre problemi assegnati. 
 \begin{itemize}
-	\item \texttt{AdjacentMatrix}: matrice di adiacenza usata per rappresentare i grafi. Tale matrice si presenta come una matrice triangolare inferiore, contenendo \texttt{n - 1} array di lunghezza crescente. Tale scelta è stata fatta per risparmiare memoria evitando di costruire una matrice quadrata. Tale classe presenta i metodi standard \texttt{get(u,v)} e \texttt{set(u,v)}, per ottenere ed impostare il peso del lato (u,v), ed un motodo \texttt{getMinAdjacentVertexWeightIndex(v)} per ottenere il lato con peso minore che ha per estremo il vertice \textit{v};
+	\item \texttt{AdjacentMatrix}: matrice di adiacenza usata per rappresentare i grafi. Tale matrice si presenta come una matrice triangolare inferiore, contenendo \texttt{n - 1} array di lunghezza crescente. Tale scelta è stata fatta per risparmiare memoria evitando di costruire una matrice quadrata. Tale classe presenta i metodi standard \texttt{get(u,v)} e \texttt{set(u,v)}, per ottenere ed impostare il peso del lato (u,v), ed un metodo \texttt{getMinAdjacentVertexWeightIndex(v)} per ottenere il lato con peso minore che ha per estremo il vertice \textit{v};
 	\item \texttt{Graph}: contiene esclusivamente una matrice di adiacenza, dato che tutte le informazioni necessarie dei nodi (i quali iniziano ad essere contati da 0) e dei lati possono essere ottenute analizzando la matrice di adiacenza;
 	\item \texttt{Node}: classe non utilizzata direttamente da \textit{Graph}, ma usata per costruire il MST (Minimum Spanning Tree) per l'algoritmo di 2-approssimazione richiesto. Essa dunque contiene solo l'\textit{ID}, un riferimento al nodo padre e una lista di riferimenti ai nodi figli;
-	\item \texttt{Edge}: come la classe \textit{Node}, anche \textit{Edge} viene utilizzata solo per costruire l'MST attraverso l'algoritmo \textit{Kruskal} implementato nello scorso assignement.
+	\item \texttt{Edge}: come la classe \textit{Node}, anche \textit{Edge} viene utilizzata solo per costruire l'MST attraverso l'algoritmo \textit{Kruskal} implementato nello scorso assignment.
 	\item \texttt{DisjointSet}: questa struttura dati gestisce partizioni di oggetti, rappresentati con un numero intero che li identifica. Ogni oggetto può stare in una sola delle partizioni degli insiemi disgiunti presenti. La struttura dati è utilizzata all'interno dell'algoritmo \texttt{Kruskal}.
 	\item \texttt{TSP}: contiene tutti gli algoritmi richiesti dagli assignment, più le funzioni ausiliarie per il corretto funzionamento di questi ultimi, in particolar modo è importante menzionare
 	\begin{itemize}
