--- a/relazioneAA/TeXConfig/package.tex
+++ b/relazioneAA/TeXConfig/package.tex
@@ -6,6 +6,7 @@
 \usepackage{stmaryrd}
 \usepackage{relsize}
 \usepackage{amsmath}
+\usepackage{multirow}
 \usepackage{units}
 \usepackage{MnSymbol}
 \usepackage{upgreek}
