--- a/relazioneAA/relazioneAA/res/config/docInfo.tex
+++ b/relazioneAA/relazioneAA/res/config/docInfo.tex
@@ -2,6 +2,7 @@
 	\renewcommand{\headrulewidth}{0pt}
 	\begin{center}
   	\Huge{Relazione di \\Algoritmi Avanzati}\acapo
+  	\huge{\textit{Laboratorio 2 - Traveling Salesman Problem}}\acapo
   	\Large{Nicola Carlesso - matricola 1237782\\Federico Brian - matricola 1243422}\acapo
   	\Large{\textit{A.A. 2019/2020}}
   	%\vfill{A cura di Nicola Carlesso e Federico Brian}
