corretta prima parte di relazione

--- a/relazioneAA/relazioneAA/listOfSections.tex
+++ b/relazioneAA/relazioneAA/listOfSections.tex
@@ -13,5 +13,7 @@
 	%inserire input qui
 	\includeSection{Introduzione}
 	\includeSection{HeldKarp}
+	\includeSection{Heuristic}
+	\includeSection{2Approx}
 	\includeSection{Conclusioni}
 \end{flushleft}
